welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  if (vuBiscuit() == true) {
  	return false;
  } else {
  	return true;
  }
    }

for (i <- 1 to 6) { droite(); avance();  gauche(); haveBaggle(); }
